k8s/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend
  namespace: prod-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-pod
  template:
    metadata:
      labels:
        app: back-pod
    spec:
      containers:
        - name: back-ct
          image: shamrock2004/employees-backend:latest
          ports:
            - containerPort: 8080
