k8s/mysql-deployment.yml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mysql-dp
  namespace: prod-app
spec:
  serviceName: mysql-svc
  replicas: 1
  selector:
    matchLabels:
      app: mysql-pod
  template:
    metadata:
      labels:
        app: mysql-pod
    spec:
      containers:
        - name: mysql-ct
          image: mysql:8.0.33
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-vl
              mountPath: /var/lib/mysql/
  volumeClaimTemplates:
    - metadata:
        name: mysql-vl
      spec:
        accessModes: [ "ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
