k8s/backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend-svc
  namespace: prod-app
spec:
  selector:
    app: back-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
