k8s/frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend-svc
  namespace: prod-app
spec:
  selector:
    app: front-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
