k8s/mysql-service.yml
kind: Service
apiVersion: v1
metadata:
  name: mysql-svc
  namespace: prod-app
spec:
  selector:
    app: mysql-pod
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
